SDK location is modified

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Oct 29 18:49:52 PKT 2018
-sdk.dir=C\:\\Users\\Shakeel\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
